--- a/page1.html
+++ b/page1.html
@@ -36,10 +36,9 @@ I am a student from City University of Hong Kong, majoring Information Engineeri
 
 <div class="lower">
 <h2>
-Here is my resume with contact method included.
+Here are my contack method
 </h2>
 
-<button class="download"> Download<i class="material-icons" style="font-size=40px;">file_download</i> </button>
 </div>
 
 
