--- a/page1.html
+++ b/page1.html
@@ -36,7 +36,7 @@ I am a student from City University of Hong Kong, majoring Information Engineeri
 
 <div class="lower">
 <h2>
-Here are my contack method
+Here are my contact methods
 </h2>
 
 </div>
